--- a/ExamForKids/help.xib
+++ b/ExamForKids/help.xib
@@ -14,7 +14,7 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="help.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="7JG-ce-pHT">
+                <imageView userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="help" translatesAutoresizingMaskIntoConstraints="NO" id="7JG-ce-pHT">
                     <rect key="frame" x="0.0" y="67" width="600" height="600"/>
                 </imageView>
             </subviews>
@@ -22,6 +22,6 @@
         </view>
     </objects>
     <resources>
-        <image name="help.jpg" width="414" height="736"/>
+        <image name="help" width="414" height="736"/>
     </resources>
 </document>
